--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Name: Waqas Ahmad Shah <br>
         F/Name: Liaqat Ali shah <br>
         DOB: 01/06/2003 <br>
-        Address: Mohallah Saidano Qillah Kangra Shabqadar District Charsadda <br>
+        Address: Shabqadar<br>
     </p>
     <h1>Acedamic</h1>
     <p>
@@ -61,7 +61,7 @@
     </ol>
     <h1>Contact</h1>
     <pre>
-        Mobile NO: 03209955837
+        Mobile NO: 03209958940
         Email: waqasahamd545818@gmail.com
     </pre>
 </body>
