add CSS Styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        h1{
+            color: blueviolet;
+        }
+        img{
+            float: right;
+            width: 250px;
+            height: 200px;
+        }
+        table{
+            border: 2px solid greenyellow;
+        }
+        ol{
+            font-size: larger;
+            font-style: italic;
+            color: rebeccapurple;
+        }
+        ul{
+            color:black;
+        }
+        
+    </style>
 </head>
 <body>
     <!-- a picture is linked with cv website through Anchor tag -->
     <a href="https://www.coolfreecv.com/"><img src="/E-commerce/cv-template-0021.jpg" alt="CV" width="150px" height="150px"></a>
     <h1>Personal Information</h1>
-    <p>
+    <p style="color: Green;font-size: large;">
         Name: Waqas Ahmad Shah <br>
         F/Name: Liaqat Ali shah <br>
         DOB: 01/06/2003 <br>
@@ -18,7 +40,7 @@
     <h1>Acedamic</h1>
     <p>
         <table>
-            <tr>
+            <tr >
                 <th>Field</th>
                 <th>Year</th>
                 <th>Obtain Marks</th>
