--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        body{
+            background-color:aquamarine
+        }
         h1{
             color: blueviolet;
         }
