collapse border table cell

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
         table{
             border: 2px solid greenyellow;
+            border-collapse: collapse;
         }
         ol{
             font-size: larger;
@@ -30,6 +31,10 @@
         }
         ul{
             color:black;
+        }
+        th ,td {
+            border: 1px solid green;
+            border-collapse:collapse;
         }
         
     </style>
